# advanzia-assistant

./: .gitignore  LICENSE  README.md  build.sh  test.sh
crate/: Cargo.toml
extension/: .eslintignore  advanzia-assistant.spec.ts  advanzia-assistant.ts  ava.config.js  content-script.spec.ts  content-script.ts  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
extension/__snapshots__/: advanzia-assistant.spec.ts.snap
extension/_locales/de/: messages.json
extension/_locales/en/: messages.json
proxy/: Cargo.toml
proxy/src/: main.rs
