[package]
name = "proxy"
version = "1.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hudsucker = "0.9.1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
rustls-pemfile = "0.2"
env_logger = "0.9"
